[gd_scene load_steps=12 format=2]

[ext_resource path="res://ResourcesV2/Images/pixelSkyline.jpg" type="Texture" id=1]
[ext_resource path="res://ResourcesV2/Images/MainLogo.png" type="Texture" id=2]
[ext_resource path="res://ResourcesV2/Images/SinglePlayerActive.png" type="Texture" id=3]
[ext_resource path="res://ResourcesV2/Images/SinglePlayerInactive.png" type="Texture" id=4]
[ext_resource path="res://ResourcesV2/Images/MultiplayerActive.png" type="Texture" id=5]
[ext_resource path="res://ResourcesV2/Images/MultiplayerInactive.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainScenesV2/ModeSelection.gd" type="Script" id=7]
[ext_resource path="res://ResourcesV2/Images/BackActive.png" type="Texture" id=8]
[ext_resource path="res://ResourcesV2/Images/BackInactive.png" type="Texture" id=9]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 12 )

[node name="Background" type="TextureRect"]
anchor_top = -0.00173807
anchor_bottom = -0.00173807
margin_left = -1.33484
margin_right = 1366.67
margin_bottom = 765.0
rect_pivot_offset = Vector2( 189.036, 169.525 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logoRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 93.0
margin_right = 182.0
margin_bottom = 216.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="singlePlayerButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0024
margin_top = -65.5
margin_right = 83.9976
margin_bottom = -23.5
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiPlayerButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0024
margin_top = -6.5
margin_right = 83.9976
margin_bottom = 39.5
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="."]
margin_left = 1106.58
margin_top = 169.525
margin_right = 1186.58
margin_bottom = 191.525
custom_fonts/font = SubResource( 1 )
text = "Username"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -86.0
margin_right = 42.0
margin_bottom = -41.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="singlePlayerButton" to="." method="_on_singlePlayerButton_pressed"]
[connection signal="pressed" from="multiPlayerButton" to="." method="_on_multiPlayerButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
